Opera tinyMCE editor fix (was not possible to click in editors buttons if another editor was behind the target one), add shadow to better separate current locale editors from the back ones

--- a/styles/form/form.less
+++ b/styles/form/form.less
@@ -193,6 +193,11 @@ span.pkp_form_error {
 //			background: url(../lib/pkp/templates/images/structure/grid_icon_sprite.png) no-repeat;
 //			background-position: -264px -2px;
 //	 	}
+
+		td.mceFirst iframe {
+			position: relative;
+			z-index:1;
+		}
 	}
 
 	.localization_popover_container_focus {
@@ -212,6 +217,10 @@ span.pkp_form_error {
 //	 	}
 	}
 
+	.localization_popover_container_focus,
+	.localization_popover {
+		box-shadow: 3px 3px 6px #999999;
+	}
 
 	.localization_popover {
 		background-color: #eee;
